<resources>
    <string name="app_name">Coin Card Meteo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login"> Login </string>
    <string name="home"> Home </string>
    <string name="favorites"> My Favorites </string>
    <string name="search"> Search </string>
    <string name="notification"> Notification </string>
    <string name="settings"> Settings </string>
    <string name="about"> About </string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_favorites">My Favorites</string>
</resources>
