<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_black"
            app:actionLayout="@layout/menu_counter"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_black"
            android:title="@string/notification" />
    </group>

    <group android:id="@+id/group_setting">
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black"
                android:title="@string/about" />
    </group>

</menu>
