<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="csu.matos.MainActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search_black"
        app:showAsAction="always|withText"
        android:orderInCategory="120" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:orderInCategory="180"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        android:orderInCategory="200"
        app:showAsAction="never"/>
</menu>
